# multiview-human-tracker

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
experiments/default/: F_cam0_cam1_synced_undist.npz  F_cam0_cam2_synced_undist.npz  F_cam0_cam3_synced_undist.npz  cam0_calibration.npz  cam1_calibration.npz  cam2_calibration.npz  cam3_calibration.npz  offsets_event_anchored.json
experiments/default/keypoints/: cam1.npz  cam3.npz
report/: main.aux  main.out  main.tex
scripts/: calibrate_camera.py  compute_event_sync.py  consolidate_calibration.py  debug_actor_tracks.py  debug_epi_convergence.py  debug_epi_convergence_board.py  debug_lr_flip.py  debug_per_kp_breakdown.py  debug_sync_sweep.py  detect_keypoints.py  estimate_fundamental.py  estimate_offsets.py  plot_offset_diagnostics.py  recover_missing_board.py  recover_missing_keypoint.py  refit_fundamental_synced.py  refit_fundamental_undistorted.py  render_best_view.py  render_board_detect_video.py  render_board_drift_video.py  sample_keypoint_frames.py  visualize_epipolar.py
src/multiview_tracker/calibration/: __init__.py  harvest.py  monocular.py  puzzleboard.py  storage.py
src/multiview_tracker/detection/: __init__.py  dedupe.py  storage.py  yolo_pose.py
src/multiview_tracker/epipolar/: __init__.py  correspondences.py  manual_solver.py  opencv_solvers.py  undistort.py  visualize.py
src/multiview_tracker/recovery/: __init__.py  intersect.py
src/multiview_tracker/sync/: __init__.py  actor.py  correlate.py  event_anchored.py  manual.txt  signal.py
tests/: test_smoke.py
(+3 files in other folders)
